--- a/test-xml/app/src/main/res/layout/activity_main.xml
+++ b/test-xml/app/src/main/res/layout/activity_main.xml
@@ -3,21 +3,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    >
+    android:orientation="vertical">
+
     <LinearLayout
         android:id="@+id/listLinearLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        >
+        android:orientation="vertical">
+
         <ListView
             android:id="@id/android:list"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:drawSelectorOnTop="false"
-            android:scrollbars="vertical"
-            />
+            android:scrollbars="vertical" />
 
 
     </LinearLayout>
